index tablet almost done

--- a/source/index.html
+++ b/source/index.html
@@ -89,7 +89,7 @@
             </li>
             <li class="reasons-list__item reasons-list__item--bg-blue">
               <div class="reasons-list__text reasons-list__text--bg-blue reasons-list__text--short columns__item-33">
-                <h2 class="reasons-list__title">Там есть мост дьявола</h3>
+                <h2 class="reasons-list__title">Там есть <span class="reasons-list__new-line">мост дьявола</span></h3>
                 <span class="reasons-list__number">-№2-</span>
                 <p class="reasons-list__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
               </div>
@@ -103,16 +103,16 @@
               </div>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
-              <div class="reasons-list__text reasons-list__text--bg-grey">
+              <div class="reasons-list__text reasons-list__text--bg-grey reasons-list__text--narrow">
                 <h2 class="reasons-list__title reasons-list__title--bg-grey">Красивая дорога</h3>
                 <span class="reasons-list__number reasons-list__number--bg-grey">-№4-</span>
                 <p class="reasons-list__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </div>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
-              <div class="reasons-list__text">
-                <h2 class="reasons-list__title">Мало туристов</h3>
-                <span class="reasons-list__number">-№5-</span>
+              <div class="reasons-list__text reasons-list__text--bg-grey reasons-list__text--narrow">
+                <h2 class="reasons-list__title reasons-list__title--bg-grey">Мало туристов</h3>
+                <span class="reasons-list__number reasons-list__number--bg-grey">-№5-</span>
                 <p class="reasons-list__description">Большинство едет в Гранд Каньон и толпится там</p>
               </div>
             </li>
@@ -121,7 +121,7 @@
             <h3 class="visually-hidden">Найти гостиницу в Седоне</h2>
             <div class="hotel-request__wrapper">
               <b class="hotel-request__title">Заинтересовались?</b>
-              <p class="hotel-request__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+              <p class="hotel-request__text">Укажите предполагаемые даты поездки, <span class="hotel-request__new-line"></span>и мы покажем вам лучшие предложения гостиниц в седоне</p>
               <a class="hotel-request__link" href="#">Найти гостиницу</a>
             </div>
           </section>
