--- a/source/index.html
+++ b/source/index.html
@@ -104,14 +104,14 @@
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
               <div class="reasons-list__text reasons-list__text--bg-grey reasons-list__text--narrow">
-                <h2 class="reasons-list__title reasons-list__title--bg-grey">Красивая дорога</h3>
+                <h2 class="reasons-list__title reasons-list__title--bg-grey">Красивая <span class="reasons-list__new-line">дорога</span></h3>
                 <span class="reasons-list__number reasons-list__number--bg-grey">-№4-</span>
                 <p class="reasons-list__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </div>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
               <div class="reasons-list__text reasons-list__text--bg-grey reasons-list__text--narrow">
-                <h2 class="reasons-list__title reasons-list__title--bg-grey">Мало туристов</h3>
+                <h2 class="reasons-list__title reasons-list__title--bg-grey">Мало <span  class="reasons-list__new-line">туристов</span></h3>
                 <span class="reasons-list__number reasons-list__number--bg-grey">-№5-</span>
                 <p class="reasons-list__description">Большинство едет в Гранд Каньон и толпится там</p>
               </div>
