--- a/source/index.html
+++ b/source/index.html
@@ -34,10 +34,10 @@
           </div>
           <ul class="reasons__list reasons-list columns">
             <li class="reasons-list__item reasons-list__item--bg-blue">
-              <div class="reasons-list__text reasons-list__text--bg-blue columns__item-33">
-                <h2 class="reasons-list__title">Настоящий городок</h3>
-                <span class="reasons-list__number">-№1-</span>
-                <p class="reasons-list__description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+              <div class="reasons-list__bg-blue-wrapper columns__item-33">
+                <h2 class="reasons-list__bg-blue-title">Настоящий городок</h3>
+                <span class="reasons-list__bg-blue-number">-№1-</span>
+                <p class="reasons-list__bg-blue-description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
               </div>
               <img class="reasons-list__img reasons-list__img--hotel columns__item-66" src="img/main-city-mobile@1x.jpg" width="320px" height="260px" alt="отель">
             </li>
@@ -88,32 +88,32 @@
               </div>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-blue">
-              <div class="reasons-list__text reasons-list__text--bg-blue reasons-list__text--short columns__item-33">
-                <h2 class="reasons-list__title">Там есть <span class="reasons-list__new-line">мост дьявола</span></h3>
-                <span class="reasons-list__number">-№2-</span>
-                <p class="reasons-list__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+              <div class="reasons-list__bg-blue-wrapper reasons-list__bg-blue-wrapper--short columns__item-33">
+                <h2 class="reasons-list__bg-blue-title">Там есть <span class="reasons-list__new-line">мост дьявола</span></h3>
+                <span class="reasons-list__bg-blue-number">-№2-</span>
+                <p class="reasons-list__bg-blue-description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
               </div>
               <img class="reasons-list__img reasons-list__img--bridge columns__item-66" src="img/photo-bridge-mobile@1x.jpg" width="320px" height="260px" alt="мост дьявола">
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
-              <div class="reasons-list__text reasons-list__text--bg-grey">
-                <h2 class="reasons-list__title reasons-list__title--bg-grey">Небольшая площадь</h3>
-                <span class="reasons-list__number reasons-list__number--bg-grey">-№3-</span>
-                <p class="reasons-list__description reasons-list__description--bg-grey">Все интересные места находятся очень близко</p>
+              <div class="reasons-list__bg-grey-wrapper">
+                <h2 class="reasons-list__bg-grey-title">Небольшая площадь</h3>
+                <span class="reasons-list__bg-grey-number">-№3-</span>
+                <p class="reasons-list__bg-grey-description">Все интересные места находятся очень близко</p>
               </div>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
-              <div class="reasons-list__text reasons-list__text--bg-grey reasons-list__text--narrow">
-                <h2 class="reasons-list__title reasons-list__title--bg-grey">Красивая <span class="reasons-list__new-line">дорога</span></h3>
-                <span class="reasons-list__number reasons-list__number--bg-grey">-№4-</span>
-                <p class="reasons-list__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              <div class="reasons-list__bg-grey-wrapper">
+                <h2 class="reasons-list__bg-grey-title">Красивая <span class="reasons-list__new-line">дорога</span></h3>
+                <span class="reasons-list__bg-grey-number">-№4-</span>
+                <p class="reasons-list__bg-grey-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </div>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
-              <div class="reasons-list__text reasons-list__text--bg-grey reasons-list__text--narrow">
-                <h2 class="reasons-list__title reasons-list__title--bg-grey">Мало <span  class="reasons-list__new-line">туристов</span></h3>
-                <span class="reasons-list__number reasons-list__number--bg-grey">-№5-</span>
-                <p class="reasons-list__description">Большинство едет в Гранд Каньон и толпится там</p>
+              <div class="reasons-list__bg-grey-wrapper">
+                <h2 class="reasons-list__bg-grey-title">Мало <span  class="reasons-list__new-line">туристов</span></h3>
+                <span class="reasons-list__bg-grey-number">-№5-</span>
+                <p class="reasons-list__bg-grey-description">Большинство едет в Гранд Каньон и толпится там</p>
               </div>
             </li>
           </ul>
