gallery tablet complete

--- a/source/gallery.html
+++ b/source/gallery.html
@@ -35,35 +35,43 @@
           <ul class="gallery__list pictures-list columns">
             <li class="pictures-list__item columns__item-33">
               <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="img/photo-sunset-mobile@1x.jpg" width="280px" height="280px" alt="фото1"></a>
-              <div class="pictures-list__description">
-                <p class="pictures-list__name">Неродные просторы</p>
-                <p class="pictures-list__author">Автор фото: Борис</p>
+              <div class="pictures-list__wrapper">
+                <div class="pictures-list__description">
+                  <p class="pictures-list__name">Неродные просторы</p>
+                  <p class="pictures-list__author">Автор фото: Борис</p>
+                </div>
+                <span class="pictures-list__likes">1350</span>
               </div>
-              <span class="pictures-list__likes">1350</span>
             </li>
             <li class="pictures-list__item columns__item-33">
               <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="img/photo-cactus-mobile@1x.jpg" width="280px" height="280px" alt="фото2"></a>
-              <div class="pictures-list__description">
-                <p class="pictures-list__name">Местная растительность</p>
-                <p class="pictures-list__author">Автор фото: Сергей</p>
+              <div class="pictures-list__wrapper">
+                <div class="pictures-list__description">
+                  <p class="pictures-list__name">Местная растительность</p>
+                  <p class="pictures-list__author">Автор фото: Сергей</p>
+                </div>
+                <span class="pictures-list__likes">143</span>
               </div>
-              <span class="pictures-list__likes">143</span>
             </li>
             <li class="pictures-list__item pictures-list__item--bg-grey columns__item-33">
               <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="img/photo-roads-mobile@1x.jpg" width="280px" height="280px" alt="фото3"></a>
-              <div class="pictures-list__description">
-                <p class="pictures-list__name">Дорога на север</p>
-                <p class="pictures-list__author">Автор фото: Петр</p>
+              <div class="pictures-list__wrapper">
+                <div class="pictures-list__description">
+                  <p class="pictures-list__name">Дорога на север</p>
+                  <p class="pictures-list__author">Автор фото: Петр</p>
+                </div>
+                <span class="pictures-list__likes">96</span>
               </div>
-              <span class="pictures-list__likes">96</span>
             </li>
             <li class="pictures-list__item columns__item-33">
               <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="img/photo-bridge-mobile@1x.jpg" width="280px" height="280px" alt="фото4"></a>
-              <div class="pictures-list__description">
-                <p class="pictures-list__name">Мост дьявола</p>
-                <p class="pictures-list__author">Автор фото: Антон</p>
+              <div class="pictures-list__wrapper">
+                <div class="pictures-list__description">
+                  <p class="pictures-list__name">Мост дьявола</p>
+                  <p class="pictures-list__author">Автор фото: Антон</p>
+                </div>
+                <span class="pictures-list__likes">254</span>
               </div>
-              <span class="pictures-list__likes">254</span>
             </li>
           </ul>
           <ul class="gallery__list video-list">
