introduce form mobile complete

--- a/source/form.html
+++ b/source/form.html
@@ -35,17 +35,17 @@
           <form class="feedback" action="https://echo.htmlacademy.ru" method="get">
             <div class="feedback__form introduce-form">
               <label class="introduce-form__label">Представьтесь:</label>
-              <p class="introduce-form__input">
+              <p class="introduce-form__input introduce-form__input--name">
                 <label class="introduce-form__input-label" for="name">Имя*:</label>
-                <input class="introduce-form__field" type="text" id="name" name="yourname" placeholder="Петр" autocomplete="on" required>
+                <input class="introduce-form__field introduce-form__field--name" type="text" id="name" name="yourname" placeholder="Петр" autocomplete="on" required>
               </p>
-              <p class="introduce-form__input">
+              <p class="introduce-form__input introduce-form__input--surname">
                 <label class="introduce-form__input-label" for="surname">Фамилия*:</label>
-                <input class="introduce-form__field" type="text" id="surname" name="yoursurname" placeholder="Иванов" autocomplete="on" required>
+                <input class="introduce-form__field introduce-form__field--surname" type="text" id="surname" name="yoursurname" placeholder="Иванов" autocomplete="on" required>
               </p>
-              <p class="introduce-form__input">
+              <p class="introduce-form__input introduce-form__input--patronymic">
                 <label class="introduce-form__input-label" for="patronymic">Отчество:</label>
-                <input class="introduce-form__field" type="text" id="patronymic" name="yourpatronymic" placeholder="Александрович" autocomplete="on">
+                <input class="introduce-form__field introduce-form__field--patronymic" type="text" id="patronymic" name="yourpatronymic" placeholder="Александрович" autocomplete="on">
               </p>
             </div>
             <div class="feedback__form contacts-form">
