impression/introduce tablet complete

--- a/source/form.html
+++ b/source/form.html
@@ -98,6 +98,7 @@
               <textarea class="comments-form__field" id="comments" name="commentsfield">Опишите подробно все свои восторги</textarea>
             </div>
             <button class="feedback__button" type="submit" name="submit-button">Отправить отзыв</button>
+            <span class="feedback__obligatory-mark">* - обязательные поля</span>
           </form>
         </section>
       </main>
