--- a/source/form.html
+++ b/source/form.html
@@ -51,7 +51,7 @@
             <div class="feedback__form contacts-form">
               <label class="contacts-form__label">Контактная информация:</label>
               <p class="contacts-form__input">
-                <label class="contacts-form__input-label" for="phone">Контактный телефон*:</label>
+                <label class="contacts-form__input-label" for="phone"><span class="contacts-form__invis-desctop">Контактный </span>телефон*:</label>
                 <input class="contacts-form__field" type="tel" id="phone" name="yourphone" pattern="[0-9]{1}[0-9]{3}[0-9]{3}[0-9]{2}[0-9]{2}" placeholder="Введите телефон" autocomplete="on" required>
               </p>
               <p class="contacts-form__input">
