--- a/source/form.html
+++ b/source/form.html
@@ -18,7 +18,12 @@
             <li class="cite-nav__item  cite-nav__item--active"><a>ФОРМА ОТЗЫВА</a></li>
             <li class="cite-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML ACADEMY</a></li>
           </ul>
-          <a class="main-nav__logo"><img class="page-header__logo-img" src="img/logo-sedona-mobile.svg" width="" height="" alt="логотип"></a>
+          <a class="main-nav__logo">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+            <img class="page-header__logo-img" src="img/logo-sedona-mobile.svg" width="101.668px" height="83.984px" alt="логотип">
+          </picture></a>
           <button class="main-nav__open-button" type="button"></button>
           <button class="main-nav__close-button visually-hidden" type="button"></button>
         </nav>
