--- a/source/gallery.html
+++ b/source/gallery.html
@@ -18,7 +18,12 @@
             <li class="cite-nav__item"><a href="form.html">ФОРМА ОТЗЫВА</a></li>
             <li class="cite-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML ACADEMY</a></li>
           </ul>
-          <a class="main-nav__logo"><img class="page-header__logo-img" src="img/logo-sedona-mobile.svg" width="" height="" alt="логотип"></a>
+          <a class="main-nav__logo">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+            <img class="page-header__logo-img" src="img/logo-sedona-mobile.svg" width="101.668px" height="83.984px" alt="логотип">
+          </picture></a>
           <button class="main-nav__open-button" type="button"></button>
           <button class="main-nav__close-button visually-hidden" type="button"></button>
         </nav>
@@ -34,7 +39,12 @@
           </div>
           <ul class="gallery__list pictures-list columns">
             <li class="pictures-list__item columns__item-33">
-              <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="img/photo-sunset-mobile@1x.jpg" width="280px" height="280px" alt="фото1"></a>
+              <a class="pictures-list__link" href="#">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg, img/photo-sunset-desktop@2x.jpg">
+                  <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg, img/photo-sunset-tablet@2x.jpg">
+                  <img class="pictures-list__img" src="img/photo-sunset-mobile@1x.jpg" srcset="img/photo-sunset-mobile@2x.jpg" alt="фото1">
+                </picture></a>
               <div class="pictures-list__wrapper">
                 <div class="pictures-list__description">
                   <p class="pictures-list__name">Неродные просторы</p>
@@ -44,7 +54,12 @@
               </div>
             </li>
             <li class="pictures-list__item columns__item-33">
-              <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="img/photo-cactus-mobile@1x.jpg" width="280px" height="280px" alt="фото2"></a>
+              <a class="pictures-list__link" href="#">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg, img/photo-cactus-desktop@2x.jpg">
+                  <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg, img/photo-cactus-tablet@2x.jpg">
+                  <img class="pictures-list__img" src="img/photo-cactus-mobile@1x.jpg" srcset="img/photo-cactus-mobile@2x.jpg" alt="фото2">
+                </picture></a>
               <div class="pictures-list__wrapper">
                 <div class="pictures-list__description">
                   <p class="pictures-list__name">Местная растительность</p>
@@ -54,7 +69,12 @@
               </div>
             </li>
             <li class="pictures-list__item pictures-list__item--bg-grey columns__item-33">
-              <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="img/photo-roads-mobile@1x.jpg" width="280px" height="280px" alt="фото3"></a>
+              <a class="pictures-list__link" href="#">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg, img/photo-roads-desktop@2x.jpg">
+                  <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg, img/photo-roads-tablet@2x.jpg">
+                  <img class="pictures-list__img" src="img/photo-roads-mobile@1x.jpg" srcset="img/photo-roads-mobile@2x.jpg" alt="фото3">
+                </picture></a>
               <div class="pictures-list__wrapper">
                 <div class="pictures-list__description">
                   <p class="pictures-list__name">Дорога на север</p>
@@ -64,7 +84,12 @@
               </div>
             </li>
             <li class="pictures-list__item columns__item-33">
-              <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="img/photo-bridge-mobile@1x.jpg" width="280px" height="280px" alt="фото4"></a>
+              <a class="pictures-list__link" href="#">
+                <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg, img/photo-bridge-desktop@2x.jpg">
+                <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg, img/photo-bridge-tablet@2x.jpg">
+                <img class="pictures-list__img" src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg" alt="фото4">
+              </picture></a>
               <div class="pictures-list__wrapper">
                 <div class="pictures-list__description">
                   <p class="pictures-list__name">Мост дьявола</p>
