--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,12 @@
             <li class="cite-nav__item"><a href="form.html">ФОРМА ОТЗЫВА</a></li>
             <li class="cite-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML ACADEMY</a></li>
           </ul>
-          <a class="main-nav__logo"><img class="page-header__logo-img" src="img/logo-sedona-mobile.svg" width="" height="" alt="логотип"></a>
+          <a class="main-nav__logo">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+            <img class="page-header__logo-img" src="img/logo-sedona-mobile.svg" width="101.668px" height="83.984px" alt="логотип">
+          </picture></a>
           <button class="main-nav__open-button" type="button"></button>
           <button class="main-nav__close-button visually-hidden" type="button"></button>
         </nav>
@@ -39,7 +44,11 @@
                 <span class="reasons-list__bg-blue-number">-№1-</span>
                 <p class="reasons-list__bg-blue-description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
               </div>
-              <img class="reasons-list__img reasons-list__img--hotel columns__item-66" src="img/main-city-mobile@1x.jpg" width="320px" height="260px" alt="отель">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg, img/main-city-desktop@2x.jpg">
+                <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg, img/main-city-tablet@2x.jpg">
+                <img class="reasons-list__img reasons-list__img--hotel columns__item-66" src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg" alt="отель">
+              </picture>
             </li>
             <li class="reasons-list__item reasons-list__item--add-info reasons-list__add-info--motel columns__item-33">
               <div class="reasons-list__add-info-wrapper">
@@ -93,7 +102,11 @@
                 <span class="reasons-list__bg-blue-number">-№2-</span>
                 <p class="reasons-list__bg-blue-description">Да, по нему можно пройти! <span class="reasons-list__new-line--desctop">Если вы осмелитесь, конечно</span></p>
               </div>
-              <img class="reasons-list__img reasons-list__img--bridge columns__item-66" src="img/photo-bridge-mobile@1x.jpg" width="320px" height="260px" alt="мост дьявола">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg, img/photo-bridge-desktop@2x.jpg">
+                <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg, img/photo-bridge-tablet@2x.jpg">
+                <img class="reasons-list__img reasons-list__img--bridge columns__item-66" src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@1x.jpg" alt="мост дьявола">
+              </picture>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
               <div class="reasons-list__bg-grey-wrapper">
@@ -130,7 +143,11 @@
       <footer class="page-footer">
         <section class="map">
           <h4 class="visually-hidden">Карта</h4>
-          <img class="map__img" src="img/bg-map-mobile@1x.jpg" width="320px" height="350px" alt="карта">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.jpg, img/bg-map-desktop@2x.jpg">
+            <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.jpg, img/bg-map-tablet@2x.jpg">
+            <img class="map__img" src="img/bg-map-mobile@1x.jpg" srcset="img/bg-map-mobile@2x.jpg" alt="карта">
+         </picture>
         </section>
         <section class="contacts">
           <h4 class="visually-hidden">Контакты в социальных сетях</h4>
