--- a/source/index.html
+++ b/source/index.html
@@ -102,10 +102,10 @@
                 <span class="reasons-list__bg-blue-number">-№2-</span>
                 <p class="reasons-list__bg-blue-description">Да, по нему можно пройти! <span class="reasons-list__new-line--desctop">Если вы осмелитесь, конечно</span></p>
               </div>
-              <picture>
-                <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg, img/photo-bridge-desktop@2x.jpg">
-                <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg, img/photo-bridge-tablet@2x.jpg">
-                <img class="reasons-list__img reasons-list__img--bridge columns__item-66" src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@1x.jpg" alt="мост дьявола">
+              <picture class="reasons-list__img--bridge">
+                <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg, img/main-bridge-desktop@2x.jpg">
+                <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg, img/main-bridge-tablet@2x.jpg">
+                <img class="reasons-list__img columns__item-66" src="img/main-bridge-mobile@1x.jpg" srcset="img/main-bridge-mobile@1x.jpg" alt="мост дьявола">
               </picture>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
