--- a/source/index.html
+++ b/source/index.html
@@ -44,10 +44,10 @@
                 <span class="reasons-list__bg-blue-number">-№1-</span>
                 <p class="reasons-list__bg-blue-description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
               </div>
-              <picture>
+              <picture class="reasons-list__pic reasons-list__pic--hotel columns__item-66">
                 <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg, img/main-city-desktop@2x.jpg">
                 <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg, img/main-city-tablet@2x.jpg">
-                <img class="reasons-list__img reasons-list__img--hotel columns__item-66" src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg" alt="отель">
+                <img class="reasons-list__img" src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg" alt="отель">
               </picture>
             </li>
             <li class="reasons-list__item reasons-list__item--add-info reasons-list__add-info--motel columns__item-33">
@@ -102,10 +102,10 @@
                 <span class="reasons-list__bg-blue-number">-№2-</span>
                 <p class="reasons-list__bg-blue-description">Да, по нему можно пройти! <span class="reasons-list__new-line--desctop">Если вы осмелитесь, конечно</span></p>
               </div>
-              <picture class="reasons-list__img--bridge">
+              <picture class="reasons-list__pic reasons-list__pic--bridge columns__item-66">
                 <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg, img/main-bridge-desktop@2x.jpg">
                 <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg, img/main-bridge-tablet@2x.jpg">
-                <img class="reasons-list__img columns__item-66" src="img/main-bridge-mobile@1x.jpg" srcset="img/main-bridge-mobile@1x.jpg" alt="мост дьявола">
+                <img class="reasons-list__img" src="img/main-bridge-mobile@1x.jpg" srcset="img/main-bridge-mobile@1x.jpg" alt="мост дьявола">
               </picture>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
@@ -160,7 +160,7 @@
             <li class="social-list__item social-list__item--youtube"><a href="https://www.youtube.com/" target="_blank"><svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.979px" height="14.015px" viewBox="0 0 19.979 14.015" enable-background="new 0 0 19.979 14.015" xml:space="preserve"><path d="M17.145,0H2.835C1.275,0,0,1.275,0,2.835v8.345c0,1.56,1.275,2.835,2.835,2.835h14.31c1.56,0,2.835-1.275,2.835-2.835V2.835 C19.979,1.275,18.704,0,17.145,0z M7.036,10.392V3.623l6.769,3.384L7.036,10.392z"/></svg>
             </a></li>
           </ul>
-          <p class="contacts__developer">разработано<a href="https://htmlacademy.ru/intensive/adaptive"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+          <p class="contacts__developer">разработано<a href="https://htmlacademy.ru/intensive/adaptive" target="_blank"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
             <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.473,8.017l13.43-7.99l0.042-0.025V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 L13.494,5.23l-0.087,0.05l-0.088-0.056v0.109L1.925,12.118V3.147l11.548-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.014,1.415l5.904,3.513l-0.86,0.507l-5.03-2.992l-0.014,1.415l3.827,2.275l-0.782,0.523l-3.031-1.787 l-0.014,1.413l1.853,1.091l-1.8,1.081L2.034,13.622L13.405,6.787zM1.925,15.127l11.411,6.791l0.016,1.044L5.41,18.234L5.395,19.65 l7.979,4.795l0.018,1.076l-7.973-4.74l-0.013,1.414l8.021,4.822l0.046,0.025l8.143-4.872l-0.011-5.177l3.415-2.036v10.021 L13.472,31.85L1.925,24.979V15.127z"/></svg>
           </a></p>
         </section>
