menu hover/active done

--- a/source/form.html
+++ b/source/form.html
@@ -60,7 +60,7 @@
                 <input class="contacts-form__field" type="tel" id="phone" name="yourphone" pattern="[0-9]{1}[0-9]{3}[0-9]{3}[0-9]{2}[0-9]{2}" placeholder="Введите телефон" autocomplete="on" required>
               </p>
               <p class="contacts-form__input">
-                <label class="contacts-form__input-label" for="phone">Электронная почта*:</label>
+                <label class="contacts-form__input-label" for="email">Электронная почта*:</label>
                 <input class="contacts-form__field" type="email" id="email" name="youremail" placeholder="Введите e-mail" autocomplete="on" required>
               </p>
             </div>
