--- a/source/form.html
+++ b/source/form.html
@@ -105,7 +105,7 @@
               <textarea class="comments-form__field" id="comments" name="commentsfield">Опишите подробно все свои восторги</textarea>
             </div>
             <div class="feedback__flex-wrapper">
-              <button class="feedback__button" type="submit" name="submit-button">Отправить отзыв</button>
+              <button class="feedback__button blue-button" type="submit" name="submit-button">Отправить отзыв</button>
               <span class="feedback__obligatory-mark">* - обязательные поля</span>
             </div>
           </form>
