--- a/source/gallery.html
+++ b/source/gallery.html
@@ -102,7 +102,7 @@
           <ul class="gallery__list video-list">
             <li class="video-list__item">
               <div class="video-list__wrapper">
-                <p class="video-list__title">Все еще сомневайтесь?</p>
+                <p class="video-list__title">Все еще сомневаетесь?</p>
                 <p class="video-list__description">Смотрите видеопрезентацию, и скорее за билетами, пока они не подорожали в очередной раз!</p>
               </div>
               <picture>
