--- a/source/index.html
+++ b/source/index.html
@@ -135,7 +135,7 @@
             <div class="hotel-request__wrapper">
               <b class="hotel-request__title">Заинтересовались?</b>
               <p class="hotel-request__text">Укажите предполагаемые даты поездки, <span class="hotel-request__new-line"></span>и мы покажем вам лучшие предложения гостиниц в седоне</p>
-              <a class="hotel-request__link" href="#">Найти гостиницу</a>
+              <a class="hotel-request__link blue-button" href="#">Найти гостиницу</a>
             </div>
           </section>
         </section>
