--- a/source/index.html
+++ b/source/index.html
@@ -45,9 +45,9 @@
                 <p class="reasons-list__bg-blue-description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
               </div>
               <picture class="reasons-list__pic reasons-list__pic--hotel columns__item-66">
-                <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg, img/main-city-desktop@2x.jpg">
-                <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg, img/main-city-tablet@2x.jpg">
-                <img class="reasons-list__img" src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg" alt="отель">
+                <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg 1x, img/main-city-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg 1x, img/main-city-tablet@2x.jpg 2x">
+                <img class="reasons-list__img" src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg 2x" alt="отель">
               </picture>
             </li>
             <li class="reasons-list__item reasons-list__item--add-info reasons-list__add-info--motel columns__item-33">
@@ -103,9 +103,9 @@
                 <p class="reasons-list__bg-blue-description">Да, по нему можно пройти! <span class="reasons-list__new-line--desctop">Если вы осмелитесь, конечно</span></p>
               </div>
               <picture class="reasons-list__pic reasons-list__pic--bridge columns__item-66">
-                <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg, img/main-bridge-desktop@2x.jpg">
-                <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg, img/main-bridge-tablet@2x.jpg">
-                <img class="reasons-list__img" src="img/main-bridge-mobile@1x.jpg" srcset="img/main-bridge-mobile@1x.jpg" alt="мост дьявола">
+                <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg 1x, img/main-bridge-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg 1x, img/main-bridge-tablet@2x.jpg 2x">
+                <img class="reasons-list__img" src="img/main-bridge-mobile@1x.jpg" srcset="img/main-bridge-mobile@2x.jpg 2x" alt="мост дьявола">
               </picture>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
@@ -144,9 +144,9 @@
         <section class="map">
           <h4 class="visually-hidden">Карта</h4>
           <picture>
-            <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.jpg, img/bg-map-desktop@2x.jpg">
-            <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.jpg, img/bg-map-tablet@2x.jpg">
-            <img class="map__img" src="img/bg-map-mobile@1x.jpg" srcset="img/bg-map-mobile@2x.jpg" alt="карта">
+            <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.jpg 1x, img/bg-map-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.jpg 1x, img/bg-map-tablet@2x.jpg 2x">
+            <img class="map__img" src="img/bg-map-mobile@1x.jpg" srcset="img/bg-map-mobile@2x.jpg 2x" alt="карта">
          </picture>
         </section>
         <section class="contacts">
