--- a/source/form.html
+++ b/source/form.html
@@ -55,11 +55,11 @@
             </div>
             <div class="feedback__form contacts-form">
               <label class="contacts-form__label">Контактная информация:</label>
-              <p class="contacts-form__input">
+              <p class="contacts-form__input contacts-form__input--phone">
                 <label class="contacts-form__input-label" for="phone"><span class="contacts-form__invis-desctop">Контактный </span>телефон*:</label>
                 <input class="contacts-form__field" type="tel" id="phone" name="yourphone" pattern="[0-9]{1}[0-9]{3}[0-9]{3}[0-9]{2}[0-9]{2}" placeholder="Введите телефон" autocomplete="on" required>
               </p>
-              <p class="contacts-form__input">
+              <p class="contacts-form__input contacts-form__input--email">
                 <label class="contacts-form__input-label" for="email">Электронная почта*:</label>
                 <input class="contacts-form__field" type="email" id="email" name="youremail" placeholder="Введите e-mail" autocomplete="on" required>
               </p>
