--- a/source/form.html
+++ b/source/form.html
@@ -18,7 +18,7 @@
             <li class="cite-nav__item  cite-nav__item--active"><a>ФОРМА ОТЗЫВА</a></li>
             <li class="cite-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML ACADEMY</a></li>
           </ul>
-          <a class="main-nav__logo">
+          <a class="main-nav__logo" href="index.html">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
