map-marker done

--- a/source/index.html
+++ b/source/index.html
@@ -148,6 +148,7 @@
             <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.jpg 1x, img/bg-map-tablet@2x.jpg 2x">
             <img class="map__img" src="img/bg-map-mobile@1x.jpg" srcset="img/bg-map-mobile@2x.jpg 2x" alt="карта">
           </picture>
+          <img class="map__marker" src="img/icon-map-marker.svg" width="27px" height="27px" alt="мы здесь">
         </section>
         <section class="contacts">
           <h4 class="visually-hidden">Контакты в социальных сетях</h4>
