--- a/source/gallery.html
+++ b/source/gallery.html
@@ -9,6 +9,9 @@
     <meta name="description" content="">
   </head>
   <body>
+    <div style="display:none">
+      <include src="build/img/sprite.svg"></include>
+    </div>
     <div class="content-wrapper">
       <header class="page-header">
         <nav class="main-nav">
