--- a/source/form.html
+++ b/source/form.html
@@ -25,7 +25,7 @@
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
-            <img class="page-header__logo-img" src="img/logo-sedona-mobile.svg" width="101.668px" height="83.984px" alt="логотип">
+            <img class="page-header__logo-img" src="img/logo-sedona-mobile.svg" width="101" height="84" alt="логотип">
           </picture></a>
           <button class="main-nav__open-button" type="button"></button>
           <button class="main-nav__close-button visually-hidden" type="button"></button>
@@ -33,7 +33,7 @@
       </header>
       <main class="page-main">
         <header class="page-main__header page-main__header--inner">
-          <img class="page-main__img" src="img/text-sedona.svg" width="229px" height="39px">
+          <img class="page-main__img" src="img/text-sedona.svg" width="229" height="39" alt="седона">
         </header>
         <section class="form">
           <div class="form__wrapper">
