--- a/source/index.html
+++ b/source/index.html
@@ -128,9 +128,9 @@
         <section class="map">
           <h4 class="visually-hidden">Карта</h4>
           <picture>
-            <source type="image/webp" media="(min-width: 1200px)" srcset="img/bg-map-desktop.webp 1x, img/bg-map-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)" srcset="img/bg-map-tablet.webp 1x, img/bg-map-tablet.webp 2x">
-            <source type="image/webp" srcset="img/bg-map-mobile.webp 1x, img/bg-map-mobile@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 1200px)" srcset="build/img/bg-map-desktop.webp 1x, build/img/bg-map-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="build/img/bg-map-tablet.webp 1x, build/img/bg-map-tablet.webp 2x">
+            <source type="image/webp" srcset="build/img/bg-map-mobile.webp 1x, build/img/bg-map-mobile@2x.webp 2x">
             <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.jpg 1x, img/bg-map-desktop@2x.jpg 2x">
             <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.jpg 1x, img/bg-map-tablet@2x.jpg 2x">
             <img class="map__img" src="img/bg-map-mobile@1x.jpg" srcset="img/bg-map-mobile@2x.jpg 2x" alt="карта">
