--- a/source/index.html
+++ b/source/index.html
@@ -48,9 +48,9 @@
                 <p class="reasons-list__bg-blue-description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
               </div>
               <picture class="reasons-list__pic reasons-list__pic--hotel columns__item-66">
-                <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-city-desktop.webp 1x, img/main-city-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/main-city-tablet.webp 1x, img/main-city-tablet.webp 2x">
-                <source type="image/webp" srcset="img/main-city-mobile.webp 1x, img/main-city-mobile@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.webp 1x, img/main-city-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/main-city-tablet@1x.webp 1x, img/main-city-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/main-city-mobile@1x.webp 1x, img/main-city-mobile@2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg 1x, img/main-city-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg 1x, img/main-city-tablet@2x.jpg 2x">
                 <img class="reasons-list__img" src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg 2x" alt="отель">
@@ -84,8 +84,8 @@
                 <p class="reasons-list__bg-blue-description">Да, по нему можно пройти! <span class="reasons-list__new-line--desctop">Если вы осмелитесь, конечно</span></p>
               </div>
               <picture class="reasons-list__pic reasons-list__pic--bridge columns__item-66">
-                <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-bridge-desktop.webp 1x, img/main-bridge-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/main-bridge-tablet.webp 1x, img/main-bridge-tablet.webp 2x">
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.webp 1x, img/main-bridge-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.webp 1x, img/main-bridge-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="img/main-bridge-mobile.webp 1x, img/main-bridge-mobile@2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg 1x, img/main-bridge-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg 1x, img/main-bridge-tablet@2x.jpg 2x">
@@ -128,8 +128,8 @@
         <section class="map">
           <h4 class="visually-hidden">Карта</h4>
           <picture>
-            <source type="image/webp" media="(min-width: 1200px)" srcset="img/bg-map-desktop.webp 1x, img/bg-map-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)" srcset="img/bg-map-tablet.webp 1x, img/bg-map-tablet.webp 2x">
+            <source type="image/webp" media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.webp 1x, img/bg-map-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.webp 1x, img/bg-map-tablet@2x.webp 2x">
             <source type="image/webp" srcset="img/bg-map-mobile.webp 1x, img/bg-map-mobile@2x.webp 2x">
             <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.jpg 1x, img/bg-map-desktop@2x.jpg 2x">
             <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.jpg 1x, img/bg-map-tablet@2x.jpg 2x">
@@ -142,10 +142,10 @@
           <b class="contacts__tag">#visitsedona</b>
           <ul class="contacts__list social-list">
             <li class="social-list__item social-list__item--twitter"><a href="https://twitter.com/" target="_blank">
-              <svg class="social-list__icon" width="17.5" height="14.663"><use xlink:href="#icon-twitter"></use></svg>
+              <svg class="social-list__icon" width="17" height="15"><use xlink:href="#icon-twitter"></use></svg>
             </a></li>
             <li class="social-list__item social-list__item--fb"><a href="https://www.facebook.com/" target="_blank">
-              <svg class="social-list__icon" width="8.672" height="18.944"><use xlink:href="#icon-facebook"></use></svg>
+              <svg class="social-list__icon" width="8" height="19"><use xlink:href="#icon-facebook"></use></svg>
             </a></li>
             <li class="social-list__item social-list__item--youtube"><a href="https://www.youtube.com/" target="_blank">
               <svg class="social-list__icon" width="20" height="14"><use xlink:href="#icon-youtube"></use></svg>
