--- a/source/gallery.html
+++ b/source/gallery.html
@@ -44,9 +44,9 @@
             <li class="pictures-list__item columns__item-33">
               <a class="pictures-list__link" href="#">
                 <picture>
-                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-sunset-desktop.webp 1x, img/photo-sunset-desktop@2x.webp 2x">
-                  <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-sunset-tablet.webp 1x, img/photo-sunset-tablet.webp 2x">
-                  <source type="image/webp" srcset="img/photo-sunset-mobile.webp 1x, img/photo-sunset-mobile@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.webp 1x, img/photo-sunset-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.webp 1x, img/photo-sunset-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/photo-sunset-mobile@1x.webp 1x, img/photo-sunset-mobile@2x.webp 2x">
                   <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
                   <img class="pictures-list__img" src="img/photo-sunset-mobile@1x.jpg" srcset="img/photo-sunset-mobile@2x.jpg 2x" alt="фото1">
@@ -57,15 +57,7 @@
                   <p class="pictures-list__author">Автор фото: Борис</p>
                 </div>
                 <div class="pictures-list__likes">
-                  <svg version="1.0" id="icon-like" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
-                    <g id="Page-1">
-                      <g id="Core" transform="translate(-295.000000, -464.000000)">
-                        <g id="thumb-up" transform="translate(295.000000, 464.000000)">
-                          <path id="Shape" d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z"/>
-                        </g>
-                      </g>
-                    </g>
-                  </svg>
+                  <svg class="pictures-list__icon" width="22" height="20"><use xlink:href="#icon-like"></use></svg>
                   <span class="pictures-list__digitals">1350</span>
                 </div>
               </div>
@@ -73,9 +65,9 @@
             <li class="pictures-list__item columns__item-33">
               <a class="pictures-list__link" href="#">
                 <picture>
-                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-cactus-desktop.webp 1x, img/photo-cactus-desktop@2x.webp 2x">
-                  <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-cactus-tablet.webp 1x, img/photo-cactus-tablet.webp 2x">
-                  <source type="image/webp" srcset="img/photo-cactus-mobile.webp 1x, img/photo-cactus-mobile@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.webp 1x, img/photo-cactus-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.webp 1x, img/photo-cactus-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/photo-cactus-mobile@1x.webp 1x, img/photo-cactus-mobile@2x.webp 2x">
                   <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg 1x, img/photo-cactus-tablet@2x.jpg 2x">
                   <img class="pictures-list__img" src="img/photo-cactus-mobile@1x.jpg" srcset="img/photo-cactus-mobile@2x.jpg 2x" alt="фото2">
@@ -86,15 +78,7 @@
                   <p class="pictures-list__author">Автор фото: Сергей</p>
                 </div>
                 <div class="pictures-list__likes">
-                  <svg version="1.0" id="icon-like" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
-                    <g id="Page-1">
-                      <g id="Core" transform="translate(-295.000000, -464.000000)">
-                        <g id="thumb-up" transform="translate(295.000000, 464.000000)">
-                          <path id="Shape" d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z"/>
-                        </g>
-                      </g>
-                    </g>
-                  </svg>
+                  <svg class="pictures-list__icon" width="22" height="20"><use xlink:href="#icon-like"></use></svg>
                   <span class="pictures-list__digitals">143</span>
                 </div>
               </div>
@@ -102,9 +86,9 @@
             <li class="pictures-list__item pictures-list__item--bg-grey columns__item-33">
               <a class="pictures-list__link" href="#">
                 <picture>
-                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-roads-desktop.webp 1x, img/photo-roads-desktop@2x.webp 2x">
-                  <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-roads-tablet.webp 1x, img/photo-roads-tablet.webp 2x">
-                  <source type="image/webp" srcset="img/photo-roads-mobile.webp 1x, img/photo-roads-mobile@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.webp 1x, img/photo-roads-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.webp 1x, img/photo-roads-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/photo-roads-mobile@1x.webp 1x, img/photo-roads-mobile@2x.webp 2x">
                   <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg 1x, img/photo-roads-tablet@2x.jpg 2x">
                   <img class="pictures-list__img" src="img/photo-roads-mobile@1x.jpg" srcset="img/photo-roads-mobile@2x.jpg 2x" alt="фото3">
@@ -115,15 +99,7 @@
                   <p class="pictures-list__author">Автор фото: Петр</p>
                 </div>
                 <div class="pictures-list__likes">
-                  <svg version="1.0" id="icon-like" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
-                    <g id="Page-1">
-                      <g id="Core" transform="translate(-295.000000, -464.000000)">
-                        <g id="thumb-up" transform="translate(295.000000, 464.000000)">
-                          <path id="Shape" d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z"/>
-                        </g>
-                      </g>
-                    </g>
-                  </svg>
+                  <svg class="pictures-list__icon" width="22" height="20"><use xlink:href="#icon-like"></use></svg>
                   <span class="pictures-list__digitals">96</span>
                 </div>
               </div>
@@ -131,9 +107,9 @@
             <li class="pictures-list__item columns__item-33">
               <a class="pictures-list__link" href="#">
                 <picture>
-                <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-bridge-desktop.webp 1x, img/photo-bridge-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-bridge-tablet.webp 1x, img/photo-bridge-tablet.webp 2x">
-                <source type="image/webp" srcset="img/photo-bridge-mobile.webp 1x, img/photo-bridge-mobile@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.webp 1x, img/photo-bridge-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.webp 1x, img/photo-bridge-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/photo-bridge-mobile@1x.webp 1x, img/photo-bridge-mobile@2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg 1x, img/photo-bridge-tablet@2x.jpg 2x">
                 <img class="pictures-list__img" src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg 2x" alt="фото4">
@@ -144,15 +120,7 @@
                   <p class="pictures-list__author">Автор фото: Антон</p>
                 </div>
                 <div class="pictures-list__likes">
-                  <svg version="1.0" id="icon-like" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
-                    <g id="Page-1">
-                      <g id="Core" transform="translate(-295.000000, -464.000000)">
-                        <g id="thumb-up" transform="translate(295.000000, 464.000000)">
-                          <path id="Shape" d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z"/>
-                        </g>
-                      </g>
-                    </g>
-                  </svg>
+                  <svg class="pictures-list__icon" width="22" height="20"><use xlink:href="#icon-like"></use></svg>
                   <span class="pictures-list__digitals">254</span>
                 </div>
               </div>
@@ -165,9 +133,9 @@
                 <p class="video-list__description">Смотрите видеопрезентацию, и скорее за билетами, пока они не подорожали в очередной раз!</p>
               </div>
               <picture>
-                <source type="image/webp" media="(min-width: 1200px)" srcset="img/video-desktop.webp 1x, img/video-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/video-tablet.webp 1x, img/video-tablet.webp 2x">
-                <source type="image/webp" srcset="img/video-mobile.webp 1x, img/video-mobile@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/video-desktop@1x.webp 1x, img/video-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/video-tablet@1x.webp 1x, img/video-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/video-mobile@1x.webp 1x, img/video-mobile@2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
                 <img class="video-list__clip" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="видос">
@@ -177,20 +145,15 @@
                 <span class="video-list__handle" tabindex="0" aria-label="ползунок проигрывателя"></span>
               </div>
               <div class="video-list__panel">
-                <span class="video-list__replay" tabindex="0" aria-label="показать с начала"><svg version="1.0" id="icon-replay" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px" height="20px" viewBox="0 0 16 20" enable-background="new 0 0 16 20" xml:space="preserve">
-                  <path d="M8,4V0L3,5l5,5V6c3.315,0,6,2.686,6,6s-2.685,6-6,6s-6-2.686-6-6H0c0,4.42,3.58,8,8,8s8-3.58,8-8S12.42,4,8,4z"/>
-                </svg></span>
-                <span class="video-list__subtitles" tabindex="0" aria-label="показать субтитры"><svg version="1.0" id="icon-subtitles" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="32px" height="20px" viewBox="0 0 32 20" enable-background="new 0 0 32 20" xml:space="preserve">
-                  <path d="M29,0H3C1.35,0,0,1.35,0,3v14c0,1.65,1.35,3,3,3h26c1.65,0,3-1.35,3-3V3C32,1.35,30.65,0,29,0z M14.403,15.854c-0.545,0.108-1.104,0.164-1.678,0.164c-0.694,0-1.354-0.107-1.976-0.323c-0.623-0.214-1.172-0.562-1.646-1.041 s-0.852-1.103-1.133-1.868C7.69,12.02,7.551,11.091,7.551,10c0-1.134,0.157-2.085,0.471-2.851c0.315-0.768,0.723-1.384,1.224-1.854  c0.502-0.468,1.062-0.804,1.679-1.008c0.616-0.204,1.233-0.307,1.852-0.307c0.66,0,1.22,0.045,1.678,0.134  c0.457,0.087,0.835,0.192,1.133,0.313L15.14,6.347c-0.254-0.121-0.555-0.209-0.902-0.265C13.891,6.027,13.47,6,12.973,6 c-0.915,0-1.649,0.325-2.206,0.977c-0.558,0.651-0.836,1.663-0.836,3.031c0,0.598,0.067,1.142,0.199,1.632  c0.132,0.493,0.334,0.913,0.603,1.26c0.271,0.349,0.607,0.619,1.01,0.812c0.402,0.193,0.867,0.29,1.396,0.29  c0.496,0,0.915-0.049,1.257-0.148c0.342-0.099,0.639-0.227,0.893-0.38l0.463,1.841C15.398,15.564,14.949,15.745,14.403,15.854z   M23.101,15.854c-0.545,0.108-1.105,0.164-1.678,0.164c-0.694,0-1.354-0.107-1.976-0.323c-0.623-0.214-1.172-0.562-1.646-1.041  s-0.852-1.103-1.133-1.868c-0.281-0.767-0.421-1.695-0.421-2.786c0-1.134,0.157-2.085,0.471-2.851  c0.314-0.768,0.723-1.384,1.223-1.854c0.502-0.468,1.062-0.804,1.68-1.008c0.616-0.204,1.233-0.307,1.851-0.307 c0.661,0,1.221,0.045,1.678,0.134c0.458,0.087,0.836,0.192,1.133,0.313l-0.446,1.918c-0.253-0.121-0.554-0.209-0.901-0.265  C22.588,6.027,22.166,6,21.67,6c-0.915,0-1.649,0.325-2.206,0.977c-0.558,0.651-0.836,1.663-0.836,3.031  c0,0.598,0.067,1.142,0.199,1.632c0.132,0.493,0.334,0.913,0.603,1.26c0.271,0.349,0.606,0.619,1.009,0.812 c0.402,0.193,0.868,0.29,1.396,0.29c0.497,0,0.915-0.049,1.257-0.148c0.342-0.099,0.64-0.227,0.894-0.38l0.463,1.841  C24.096,15.564,23.646,15.745,23.101,15.854z"/>
-                </svg></span>
-                <span class="video-list__fullscreen" tabindex="0" aria-label="развернуть на весь экран"><svg version="1.0" id="icon-fullscreen" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20px" height="20px" viewBox="0 0 20 20" enable-background="new 0 0 20 20" xml:space="preserve">
-                  <g>
-                    <polygon points="0,0 0,3 0,6 3,6 3,3 6,3 6,0 3,0"/>
-                    <polygon points="3,14 0,14 0,17 0,20 3,20 6,20 6,17 3,17"/>
-                    <polygon points="17,0 14,0 14,3 17,3 17,6 20,6 20,3 20,0"/>
-                    <polygon points="17,17 14,17 14,20 17,20 20,20 20,17 20,14 17,14"/>
-                  </g>
-                </svg></span>
+                <span class="video-list__replay" tabindex="0" aria-label="показать с начала">
+                  <svg class="video-list__icon" width="16" height="20"><use xlink:href="#icon-video-replay"></use></svg>
+                </span>
+                <span class="video-list__subtitles" tabindex="0" aria-label="показать субтитры">
+                  <svg class="video-list__icon" width="32" height="20"><use xlink:href="#icon-video-subtitles"></use></svg>
+                </span>
+                <span class="video-list__fullscreen" tabindex="0" aria-label="развернуть на весь экран">
+                  <svg class="video-list__icon" width="20" height="20"><use xlink:href="#icon-video-fullscreen"></use></svg>
+                </span>
               </div>
             </li>
           </ul>
@@ -198,7 +161,7 @@
       </main>
       <footer class="page-footer">
         <section class="contacts">
-          <h2 class="visually-hidden">Контакты в социальных сетях</h4>
+          <h2 class="visually-hidden">Контакты в социальных сетях</h2>
           <b class="contacts__tag">#visitsedona</b>
           <ul class="contacts__list social-list">
             <li class="social-list__item social-list__item--twitter"><a href="https://twitter.com/" target="_blank">
